tests/testfiles/passing/invalid_identifiers/keyword_as_id_extern.c
/* Keyword as identifier: extern */
int main() {
    int extern;
    extern = 2;
}